playground/bnf-learning.txt
## 文法の記述方法と再帰下降構文解析

嬢除算や優先順位のカッコ、\*, /, ()を言語に追加したいが
それをするには\*や/の「演算子の優先順位」(operator precedence)という。

構文解析
- パーサーの出力のデータ構造を知ることで、最終的なゴールを把握する。
- 文法規則を定義するルールを学ぶ。
- 文法規則を定義するルールを元に、パーサーを書くテクニックを学ぶ。


プログラミング言語の構文の記述方法
- プログラミング言語の構文の大部分は「生成規則」というものを使って定義されている。
生成規則とは、文法を再起的に定義するルール。

この生成文法というアイデアを考えついたのは、チョムスキーという言語学者

生成規則をコンパクト、かつ分かりやすく記述するための記法としてBNF, (Backus-Naur form), EBNF(Extended BNF)というものがある。

BNFでは、一つ一つの生成規則をA=a1 a2 a3....という形式で表す。
これは、Aはa1 a2 a3に展開できるという意味。
a1 a2 a3は、0個以上の記号の列で、それ以上展開できない記号と、さらに展開でいる記号の両方を含むことができる。

それ以上展開でいない記号を、「終端記号」, どれかの生成規則の左辺にきていて展開でいる記号を「非終端記号」という。
このような生成規則で定義されている文法のことを一般的に「自由文脈文法」という。

「自由」とは、「ある記号を置き換えるルールが、その左右にある文字によって変化しない」という置換のルール単位での自由。


以下の生成規則では、加減算の生成規則を定義している。
```
expr = num ("+" num | "-" num)*
```


### 追記・調べ

C言語は自由文脈文法なのか。

「ほぼ自由文脈文法だが、厳密には違う。」

C言語には、パースする際に、自由文脈文法だけでは解決できない「有名な問題がある。」

```
T *b
```
これは、ポインタ変数宣言なのか、それとも掛け算なのか。

これを判別するには、「事前にtypedefなどで型として定義されているのか？」というコンテキストを知っておく必要がある。

そのため、C言語は純粋な文脈自由文法ではなく、少しだけ「文脈依存」な性質を持っている。


## Cのセルフホストコンパイラに必要な文法周りの調査

1.プログラム全体の構造
C言語のプログラムは、関数またはグローバル変数の集まり。
```
program = (function | global_var)*
function = type ident "(" params? ")" block
global_var = type ident ("[" num "]")? ";"
```

2. 文(Statements)
block = "{" (declaration | stmt)* "}"
stmt(statement (文)) =   expr ";"
       | "return" expr ";"
       | "if" "(" expr ")"  stmt ( "else" stmt)?
       | "while" "(" expr ")" stmt
       | "for" "(" expr? ";" expr? ";" expr? ")" stmt
       | block

3. 式と優先順位
EBNFの階層がそのまま演算子の優先順位（ASTの深さ）になる。
下に行くほど優先度が高くなる.

expr = assign
assign = equality ("=" assign)?
equality =  relational ("==" relational | "!=" relational)*
relational = add ("<" add | "<=" add | ">" add | ">=" add)*
add = mul("+" mul | "-" mul)*
mul = unary("*" unary | "/" unary)*
unary = ("+" | "-" | "&" | "sizeof") unary
       | primary
